2015-05-30      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added rule to detect HAVE_STPCPY in configure output.
	* gm2/configure.in:  check for function stpcpy.
	* gm2/gm2-libs/config-target:  rebuilt.
	* gm2/gm2-libs/config-host:  rebuilt.
	* gm2/gm2-libs/config-host.in:  added check for stpcpy.
	* gm2/gm2config.h.in:  
	* testsuite/gm2/isolib/run/pass/testio2.mod:  added debugging printf.
	* gm2/gm2-libs-iso/TextIO.mod:  fixed bug in ReadToken so that the token
	  terminates with a white space or null.

2015-05-29      Gaius Mulley <gaius@gnu.org>

	* Solaris build fixes.
	* gm2/Make-lang.in:  added place holder for the stpcpy rule.
	  Added --lib $(STPCPY) to $(M2LINK) so that the Solaris 10 build
	  succeeds.
  	* gm2/gm2-libs-ch/wrapc.c:  added #if defined()
	  to check for the presence of SIGNBIT, SIGNBITL and SIGNBITF.
  	* gm2/gm2-libs/config-host:  rebuilt.
  	* gm2/gm2-libs/config-host.in:  added checks for SIGNBIT, SIGNBITL
	  and SIGNBITF against libm.
  	* gm2/gm2-libs/config-target:  rebuilt.
  	* gm2/gm2-libs/config-target.in:  added checks for SIGNBIT, SIGNBITL
	  and SIGNBITF against libm.
  	* gm2/gm2spec.c:  fixed many const char issues so that it can be built
	  with g++.
	* gm2/config.h.in:  added #undefs for SIGNBIT, SIGNBITL and SIGNBITF.
	* gm2/configure:  rebuilt.
	* gm2/configure.ac:  added checks for SIGNBIT, SIGNBITL
	  and SIGNBITF against libm.
	* gm2/libpim/dtoa.c:  added conditional compilation tests for
	  HAVE_ERRNO_H.
	* gm2/libpim/ldtoa.c:  added conditional compilation tests for
	  HAVE_ERRNO_H.
	* gm2/libpim/wrapc.c:  added conditional compilation tests for
	  SIGNBIT, SIGNBITL and SIGNBITF.

2015-05-29      Gaius Mulley <gaius@gnu.org>

	* Linking fixes (-v).
	* This fixes a bug reported by Christoph Schlegel and many others.
	* Linking would fail when -v was present on the command line.
	* gm2/gm2-compiler/M2Options.def:  new parameter to DisplayVersion